@@ -1,3 +1,4 @@
+* Allow None in Greater/Less PYSON
 * Add option to set admin password with trytond-admin
 * Remove super password
 * Remove database management from RPC
